--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,10 @@ h1{
     flex-wrap: wrap;
     column-gap: 80px;
     row-gap: 50px;
-    
+    flex-grow: 1;
+    flex-basis: 25%;
 }
 
-/* .row{
-    padding:25px;
-} */
 
 .cards{
     padding:10px;
@@ -24,8 +22,7 @@ h1{
 
 .HeaderTab{
     margin: 50px;
-    margin-left: 35%;
-
+    margin-left: 30%;
 }
 
 .Card-link{
@@ -46,5 +43,5 @@ h1{
 
 .cards:hover{
  transform: scale(1.1);
-
+ border: 1px solid #A367B1;
 }
