--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+    padding:0;
+    margin: 0;
+}
+
 h1{
     padding:25px;
     text-align: center;
@@ -37,7 +42,7 @@ h1{
 }
 
 .Card-link:hover{
-    border-bottom: 5px solid #A367B1;
+    border-bottom: 3px solid #A367B1;
     color:#A367B1;
 }
 
