--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@ h1{
     border-bottom: 3px solid #A367B1;
     color:#A367B1;
 }
+.Card-link[tabindex]:focus{
+    border-bottom: 3px solid #A367B1;
+    color:#A367B1;
+}
 
 .cards:hover{
  transform: scale(1.1);
